Controller and creation methods.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=family_tree;Username=postgres;Password=4114"
+  },
   "AllowedHosts": "*"
 }
