--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=family_tree;Username=postgres;Password=4114"
+    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=4114"
   }
 }
