--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=family_tree;Username=postgres;Password=4114"
+    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=4114"
   },
   "AllowedHosts": "*"
 }
