--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=4114"
+    "DefaultConnection": "Host=database;Database=FamilyTree;Username=postgres;Password=postgres"
+//    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=4114"
   },
   "AllowedHosts": "*"
 }
