--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database;Database=FamilyTree;Username=postgres;Password=postgres"
-//    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=4114"
+//    "DefaultConnection": "Host=database;Database=FamilyTree;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=postgres"
   }
 }
