--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-//    "DefaultConnection": "Host=database;Database=FamilyTree;Username=postgres;Password=postgres"
-    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=database;Database=FamilyTree;Username=postgres;Password=postgres"
+//    "DefaultConnection": "Host=localhost;Database=FamilyTree;Username=postgres;Password=postgres"
   },
   "AllowedHosts": "*"
 }
